menifests/WordPress/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress-deployment
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31111
