menifests/WordPress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    app: wordpress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  defaultBackend:
    service:
      name: wordpress-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-service
            port: 
              number: 80
